# ai-persona

./: .gitignore  fetch_context.py  index_documents.py  main.py  pyproject.toml  test_prompt_builder.py
context_data/: Evident-AI_Commits.txt  Evident-AI_README.md  InsightForge_Commits.txt  InsightForge_README.md  TruthLens-AI_Commits.txt  TruthLens-AI_README.md  stackforge-ai_Commits.txt
qdrant_db/: meta.json
qdrant_db/collection/portfolio_rag/: storage.sqlite
src/calendar/: booking_service.py  cal_client.py  intent_detector.py
src/config/: settings.py
src/rag/: chunker.py  context_loader.py  embeddings.py  prompt_builder.py  rag_service.py  retriever.py  vector_store.py
src/ui/: app.py
